apps/1-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: playground
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami:v1.0.1
          ports:
            - name: http
              containerPort: 80
