apps/1-deployments.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: playground
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: jlevesy/whoami:withauth
          ports:
            - name: http
              containerPort: 80
# ---
# kind: Deployment
# apiVersion: extensions/v1beta1
# metadata:
#   namespace: playground
#   name: whoami-badport
#   labels:
#     app: whoami
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: whoami
#       mode: badport
#   template:
#     metadata:
#       labels:
#         app: whoami
#         mode: badport
#     spec:
#       containers:
#         - name: whoami
#           image: jlevesy/whoami:withauth
#           ports:
#             - name: http
#               containerPort: 80
#           args:
#             - -port=81
---

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: playground
  name: whoamimtls
  labels:
    app: whoamimtls

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoamimtls
  template:
    metadata:
      labels:
        app: whoamimtls
    spec:
      containers:
        - name: whoami
          image: jlevesy/whoami:withauthandmtls
          ports:
            - name: https
              containerPort: 443
          args:
            - -port=443
            - -cert=/secrets/server.cert
            - -key=/secrets/server.key
            - -cacert=/secrets/ca.cert
          volumeMounts:
            - name: certs
              mountPath: "/secrets"
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: mtls-creds
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: playground
  name: whoamitcp
  labels:
    app: whoamitcp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoamitcp
  template:
    metadata:
      labels:
        app: whoamitcp
    spec:
      containers:
        - name: whoamitcp
          image: containous/whoamitcp
          ports:
            - name: tcp
              containerPort: 8080
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: playground
  name: whoamitcptls
  labels:
    app: whoamitcptls
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoamitcptls
  template:
    metadata:
      labels:
        app: whoamitcptls
    spec:
      containers:
        - name: whoamitcptls
          image: containous/whoamitcp
          args:
            - -certFile=/secrets/tls.crt
            - -keyFile=/secrets/tls.key
          ports:
            - name: tcptls
              containerPort: 8080
          volumeMounts:
            - name: certs
              mountPath: "/secrets"
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: tls.docker.localhost
