apps/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: playground
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
  selector:
    app: whoami
