apps/4-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: playground
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
  selector:
    app: whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoamimtls
  namespace: playground
spec:
  ports:
    - protocol: TCP
      name: https
      port: 443
  selector:
    app: whoamimtls
---
apiVersion: v1
kind: Service
metadata:
  name: whoamitcp
  namespace: playground
spec:
  ports:
    - protocol: TCP
      name: tcp
      port: 8080
  selector:
    app: whoamitcp
---
apiVersion: v1
kind: Service
metadata:
  name: whoamitcptls
  namespace: playground
spec:
  ports:
    - protocol: TCP
      name: tcp
      port: 8080
  selector:
    app: whoamitcptls
