apps/3-ingresses.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: path-ingress
  namespace: playground
  annotations:
    kubernetes.io/ingress.class: traefik-ninja
  labels:
    tier: frontend
spec:
  entryPoints:
    - http
  routes:
    - match: PathPrefix(`/whoami`)
      kind: Rule
      services:
        - name: whoami
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: path-ingress
  namespace: playground
  annotations:
    kubernetes.io/ingress.class: traefik-ninja
  labels:
    tier: frontend
spec:
  entryPoints:
    - tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: whoamitcp
          port: 8080
