apps/5-ingresses.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: path-ingress
  namespace: playground
  labels:
    tier: frontend
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`whoami.docker.localhost`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        # - name: strip-whoami
        # - name: test-compress
        # - name: test-errorpage
        # - name: test-forward-auth-without-tls
        - name: test-forward-auth-mtls
---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRouteTCP
# metadata:
#   name: match-all-tcp
#   namespace: playground
#   annotations:
#     kubernetes.io/ingress.class: traefik-ninja
#   labels:
#     tier: frontend
# spec:
#   entryPoints:
#     - tcp
#   routes:
#     - match: HostSNI(`*`)
#       services:
#         - name: whoamitcp
#           port: 8080
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRouteTCP
# metadata:
#   name: match-all-tcp-tls
#   namespace: playground
#   annotations:
#     kubernetes.io/ingress.class: traefik-ninja
#   labels:
#     tier: frontend
# spec:
#   entryPoints:
#     - tcp
#   routes:
#     - match: HostSNI(`whoamitcp.docker.localhost`)
#     # - match: HostSNI(`*`)
#       services:
#         - name: whoamitcp
#           port: 8080
#   tls:
#     secretName: tls.docker.localhost
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: match-all-tcp-tls-passthrough
  namespace: playground
  labels:
    tier: frontend
spec:
  entryPoints:
    - tcp
  routes:
    - match: HostSNI(`tls.docker.localhost`)
      services:
        - name: whoamitcptls
          port: 8080
  tls:
    passthrough: true
